--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>
   console.log("https://ragulkesavan.github.io/CFTH/");
 </script>
-<p>Idhula onnum illa keela poturu</p>
+<p>Flag : Idhula onnum illa keela poturu</p>
